# AgentAuthExa

./: .gitignore  README.md
agentauth/: README.md  pyproject.toml
agentauth-platform/: simulate.py
agentauth-platform/backend/: Dockerfile  fly.toml  main.py  requirements.txt
agentauth-platform/backend/static/: index.html
agentauth-platform/data/: ca_public_key.hex  corpus.json  corpus_signed.json  embeddings_index.json
agentauth-platform/frontend/: .env.local.example  package-lock.json  package.json
agentauth-platform/frontend/app/: globals.css  layout.tsx  page.tsx
agentauth-platform/frontend/app/[company]/: page.tsx
agentauth-platform/frontend/app/[company]/thesis/: page.tsx
agentauth-platform/frontend/app/demo/: layout.tsx  page.tsx
agentauth-platform/frontend/app/thesis/: page.tsx
agentauth-platform/frontend/components/: AuditTrail.tsx  ExecutionPanel.tsx  LandingPage.tsx  Nav.tsx  ResultCard.tsx  ScrollReveal.tsx  ScrollRevealInit.tsx  ThesisPage.tsx
agentauth-platform/frontend/config/: company.ts
agentauth-platform/scripts/: build_corpus.py
agentauth/agentauth/: __init__.py  core.py
agentauth/tests/: test_core.py
