[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agentauth"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["cryptography"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentauth*"]
